updates global labels

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  <h1>Test2</h1>
-  <p>Test3 test4</p>
+<p>Курсова робота з дисципліни <strong>"Сучасні технології розробки ПЗ (Python)"</strong> на тему <strong>Ресторани та кафе у місті Дніпро</strong></p>
+<p>Зроблено за допомогою фреймворка <strong>Django</strong></p>
+<p><strong>Розробник</strong>: Олексій Посідєлов (КН-22м)</p>
 {% endblock %}
