--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -8,13 +8,13 @@
 <table class="table">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Назва</th>
-      <th scope="col">Тип</th>
-      <th scope="col">Ціни</th>
-      <th scope="col">Веб-сторінка</th>
-      <th scope="col" style="min-width:150px">Коли відкриті?</th>
-      <th scope="col">Адреса</th>
-      <th scope="col">Телефон</th>
+      <th scope="col">{{ restaurant_field_labels.title }}</th>
+      <th scope="col">{{ restaurant_field_labels.type }}</th>
+      <th scope="col">{{ restaurant_field_labels.prices }}</th>
+      <th scope="col">{{ restaurant_field_labels.website }}</th>
+      <th scope="col" style="min-width:150px">{{ restaurant_field_labels.open_hours }}</th>
+      <th scope="col">{{ restaurant_field_labels.address }}</th>
+      <th scope="col">{{ restaurant_field_labels.phone }}</th>
       <th scope="col">Дії</th>
     </tr>
   </thead>
